--- a/css/005-svg-clock.css
+++ b/css/005-svg-clock.css
@@ -5,38 +5,57 @@ section.clocks {
     height: 100vh;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-content: space-evenly;
 }
 
-/* */
+/* clock-analog-city style analog clock and city label text */
+section.clock-analog-city {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+/* Style city name first*/
+section.clock-analog-city h3.clock-city {
+    align-self: center;
+}
+
+/* Style clock */
 section.clock-analog {
     border: 1px dashed hotpink;
     display: flex;
     justify-content: center;
     align-content: center;
-    width: 20%;
+    width: 100%;
 }
 
+/* Clock SVG lock-analog-draw */
 svg.clock-analog-draw {
     width: 100%;
     height: 100%;
     border: 1px dashed lightskyblue;
 }
 
+/* Hour hand marker */
 svg line.clock-marker-hour {
     stroke: gold;
     stroke-width: 2;
 }
 
+/* Second hand line markers */
 svg line.clock-marker-minute {
     stroke: gold;
     stroke-width: 1;
 }
 
+/* Markers for 12, 3, 6, and 9 hands */
 svg line.clock-marker-three-hour {
-    stroke: gold;
+    stroke: brown;
     stroke-width: .09;
+    stroke-dasharray: 2px;
+    stroke-dashoffset: 1px;
 }
 
 svg line.clock-hand-hour {
@@ -62,20 +81,22 @@ svg text.clock-marker-hour-text {
     fill: lightcoral;
     font-family: Roboto, sans-serif;
     font-weight: bold;
-    font-size: 0.2em;
+    font-size: 0.4em;
     text-anchor: middle;
 }
 
-.clock-analog:nth-last-child(even) {
+.clock-analog-city:nth-last-child(even) {
     background-color: beige;
     border: 1rem solid gold;
     border-bottom: 1rem solid goldenrod;
     border-radius: 1rem;
+    color: goldenrod;
 }
 
-.clock-analog:nth-last-child(odd) {
+.clock-analog-city:nth-last-child(odd) {
     background-color: aliceblue;
     border: 1rem solid silver;
     border-bottom: 1rem solid slategrey;
     border-radius: 1rem;
+    color: slategrey;
 }
